Ajout titre et menu

--- a/index.html
+++ b/index.html
@@ -1,14 +1,39 @@
 <!DOCTYPE html>
 
 <html>
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <title>Bienvenue sur NOMDUSITE.com</title>
-  </head>
-  
-  <body>
-  
-  </body>
-  
+	<head>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="style.css">
+		<title>Le mauvais centre</title>
+	</head>
+	
+	<body>
+		<h1>Bienvenue !</h1>
+		<h2>Le site internet spécialisé dans le tire-bouchon et le décapsuleur</h2>
+		<table>
+			<tr>
+				<form action="accueil.html">
+					<td><button>Accueil</button></td>
+				</form>
+				<form action="catalogue.html">
+					<td><button>Catalogue</button></td>
+				</form>
+				<form action="panier.html">
+					<td><button>Panier</button></td>
+				</form>
+				<form action="recherche.html">
+					<td><input name="search" placeholder="Rechercher"><button>O</button></td>
+				</form>
+			</tr>
+		</table>
+		<section id="promotion">
+			<h2>Bons plans de la semaine</h2>
+			<p>								</p>
+		</section>
+		<footer>
+			<form action="quissommesnous.html">
+				<a href="quissommesnous.html">Qui sommes nous?</a>
+			</form>
+		</footer>
+	</body>
 </html>
