Ajout bons plans

--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
 		</table>
 		<section id="promotion">
 			<h2>Bons plans de la semaine</h2>
-			<p>								</p>
+				<h3>Pour Noël, découvrez notre sélection de tire-bouchons en bois à -2% !</h3>
+					<p> ajout image</p>
+				<h3>Cette semaine uniquement, faites plaisir à vos proches en leur offrant le tout nouveau décapsuleur porte-clef</h3> 
+					<p> ajout image</p>
 		</section>
 		<footer>
 			<form action="quissommesnous.html">
