Ajout de toutes les pages

--- a/index.html
+++ b/index.html
@@ -8,25 +8,19 @@
 	</head>
 	
 	<body>
-		<h1>Bienvenue !</h1>
-		<h2>Le site internet spécialisé dans le tire-bouchon et le décapsuleur</h2>
-		<table>
-			<tr>
-				<form action="accueil.html">
-					<td><button>Accueil</button></td>
-				</form>
-				<form action="catalogue.html">
-					<td><button>Catalogue</button></td>
-				</form>
-				<form action="panier.html">
-					<td><button>Panier</button></td>
-				</form>
-				<form action="recherche.html">
-					<td><input name="search" placeholder="Rechercher"><button>O</button></td>
-				</form>
-			</tr>
-		</table>
-		<section id="promotion">
+		<section id="entete">
+			<h1>Bienvenue !</h1>
+			<h2>Le site internet spécialisé dans le tire-bouchon et le décapsuleur</h2>
+		</section><section id="menu">
+			<table>
+				<tr>
+					<td><a href="index.html">Accueil</a></td>
+					<td><a href="catalogue.html">Catalogue<a></td>
+					<td><a href="panier.html">Panier</a></td>
+					<td><input name="search" placeholder="Rechercher"><a href="recherche.html">Q</a></td>
+				</tr>
+			</table>
+		</section><section id="promotion">
 			<h2>Bons plans de la semaine</h2>
 				<h3>Pour Noël, découvrez notre sélection de tire-bouchons en bois à -2% !</h3>
 					<p> ajout image</p>
@@ -34,9 +28,8 @@
 					<p> ajout image</p>
 		</section>
 		<footer>
-			<form action="quissommesnous.html">
-				<a href="quissommesnous.html">Qui sommes nous?</a>
-			</form>
+			<p> En savoir plus </p>
+			<a href="quisommesnous.html">Qui sommes nous?</a>
 		</footer>
 	</body>
 </html>
