Avancée sur l'accueil + ajout d'images

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	
 	<body>
 		<section id="entete">
-			<h1>Bienvenue !</h1>
+			<h1>Le mauvais centre !</h1>
 			<h2>Le site internet spécialisé dans le tire-bouchon et le décapsuleur</h2>
 		</section><section id="menu">
 			<table>
@@ -17,15 +17,16 @@
 					<td><a href="index.html">Accueil</a></td>
 					<td><a href="catalogue.html">Catalogue<a></td>
 					<td><a href="panier.html">Panier</a></td>
-					<td><input name="search" placeholder="Rechercher"><a href="recherche.html">Q</a></td>
+					<td><form action="article.html">
+						<input name="search" type="text" placeholder="Rechercher"><a href="article.html">Q</a></td>
 				</tr>
 			</table>
 		</section><section id="promotion">
 			<h2>Bons plans de la semaine</h2>
 				<h3>Pour Noël, découvrez notre sélection de tire-bouchons en bois à -2% !</h3>
-					<p> ajout image</p>
+					<img src="assets/tireBouchonBois.jpg" alt="Selection de tires bouchons en bois">
 				<h3>Cette semaine uniquement, faites plaisir à vos proches en leur offrant le tout nouveau décapsuleur porte-clef</h3> 
-					<p> ajout image</p>
+					<img src="assets/decapsuleurPorteCle.jpg" alt="Decapsuleur porte clé">
 		</section>
 		<footer>
 			<p> En savoir plus </p>
