Ajout de la page construction

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 					<div>Mon panier</div><div class="price">0.00€</div>
 				</a>
 			</div><div class="compte">
-				<a href="" class="link">
+				<a href="construction.html" class="link">
 						<img src="assets/images/bonhomme.jpg" class="logoHeader" alt="image bonhomme compte">
 						<div>Mon compte</div>
 						<div>Se connecter</div>
@@ -31,45 +31,45 @@
 							<a href="index.html" class="link">Accueil</a>
 							<br>
 							<br>
-							<a href="" class="link">Les bons plans de la Noël !</a>
+							<a href="construction.html" class="link">Les bons plans de Noël !</a>
 							<br>
-							<a href="" class="link">Les bons plans de la semaine</a>
+							<a href="construction.html" class="link">Les bons plans de la semaine</a>
 							<br>
-							<a href="" class="link">Les bons plans du mois</a>
+							<a href="construction.html" class="link">Les bons plans du mois</a>
 						</div>
 					</td><td>
 						<div id="tireBouchon">
-							<a href="" class="link">Notre sélection de tire-bouchon</a>
+							<a href="construction.html" class="link">Notre sélection de tire-bouchon</a>
 							<br>
 							<br>
-							<a href="" class="link">En bois</a>
+							<a href="construction.html" class="link">En bois</a>
 							<br>
-							<a href="" class="link">En acier</a>
+							<a href="construction.html" class="link">En acier</a>
 							<br>
-							<a href="" class="link">Personnalisé</a>
+							<a href="construction.html" class="link">Personnalisé</a>
 							<br>
-							<a href="" class="link">Haut de gamme</a>
+							<a href="construction.html" class="link">Haut de gamme</a>
 							<br>
-							<a href="" class="link">Milieu de gamme</a>
+							<a href="construction.html" class="link">Milieu de gamme</a>
 							<br>
-							<a href="" class="link">Bas de gamme</a>
+							<a href="construction.html" class="link">Bas de gamme</a>
 						</div>
 					</td><td>
-						<div id="decapsuleur">
-							<a href="" class="link">Notre sélection de décapsuleurs</a>
+						<div id="decapsuleur">	
+							<a href="construction.html" class="link">Notre sélection de décapsuleurs</a>
 							<br>
 							<br>
-							<a href="" class="link">En bois</a>
+							<a href="construction.html" class="link">En bois</a>
 							<br>
-							<a href="" class="link">En acier</a>
+							<a href="construction.html" class="link">En acier</a>
 							<br>
-							<a href="" class="link">Personnalisé</a>
+							<a href="construction.html" class="link">Personnalisé</a>
 							<br>
-							<a href="" class="link">Haut de gamme</a>
+							<a href="construction.html" class="link">Haut de gamme</a>
 							<br>
-							<a href="" class="link">Milieu de gamme</a>
+							<a href="construction.html" class="link">Milieu de gamme</a>
 							<br>
-							<a href="" class="link">Bas de gamme</a>
+							<a href="construction.html" class="link">Bas de gamme</a>
 						</div>
 					</td><td>
 						<div id="catalogue">
@@ -78,18 +78,18 @@
 							<br>
 							<a href="article.html" class="link">Le coup de coeur de la semaine</a>
 							<br>
-							<a href="" class="link">Tous nos produits</a>
+							<a href="construction.html" class="link">Tous nos produits</a>
 							<br>
-							<a href="" class="link">Tous les tires-bouchon</a>
+							<a href="construction.html" class="link">Tous les tires-bouchon</a>
 							<br>
-							<a href="" class="link">Tous les décapsuleurs</a>
+							<a href="construction.html" class="link">Tous les décapsuleurs</a>
 							<br>
-							<a href="" class="link">Tous nos services</a>
+							<a href="construction.html" class="link">Tous nos services</a>
 							<br>
 						</div>
 					</td><td>
 					<form action="recherche.html">
-						<div><img src="assets/images/loupe.png" alt="image loupe rechercher"></div>
+						<div><a href="recherche.html"><img src="assets/images/loupe.png" alt="image loupe rechercher"></a></div>
 						<input name="search" type="text" placeholder="Rechercher un produit ou une référence..."><a href="article.html"></a>
 					</form></td>
 					</tr>
@@ -103,19 +103,19 @@
 					<img src="assets/images/decapsuleurPorteCle.jpg" alt="Decapsuleur porte clé">
 		</section>
 		<footer>
-			<table>
+			<table id="bas">
 				<tr>
-					<td><a href="" class="link">Tous nos produits</a></td>
-					<td><a href="" class="link">Qui sommes nous?</a></td>
-					<td><a href="" class="link">Moyens de paiements</a></td>
+					<td><a href="construction.html" class="link">Tous nos produits</a></td>
+					<td><a href="construction.html" class="link">Qui sommes nous?</a></td>
+					<td><a href="construction.html" class="link">Moyens de paiements</a></td>
 				</tr><tr>
-					<td><a href="" class="link">Nos offres et promotions</a></td>
-					<td><a href="" class="link">Nous contacter</a></td>
-					<td><a href="" class="link">Livraisons</a></td>
+					<td><a href="construction.html" class="link">Nos offres et promotions</a></td>
+					<td><a href="construction.html" class="link">Nous contacter</a></td>
+					<td><a href="construction.html" class="link">Livraisons</a></td>
 				</tr><tr>
-					<td><a href="" class="link">Les nouveautés</a></td>
-					<td><a href="" class="link">FAQ</a></td>
-					<td><a href="" class="link">Conditions générales de ventes</a></td>
+					<td><a href="construction.html" class="link">Les nouveautés</a></td>
+					<td><a href="construction.html" class="link">FAQ</a></td>
+					<td><a href="construction.html" class="link">Conditions générales de ventes</a></td>
 				</tr>
 			</table>
 		</footer>
