Correction erreur label page validation commande

--- a/validationcommande.html
+++ b/validationcommande.html
@@ -111,10 +111,10 @@
 				<span><label>Nom : <input placeholder="Nom"></label></span>
 				<span><label>Prénom : <input placeholder="Prénom"></label></span>
 				<span><label>Adresse : <input placeholder="Adresse de livraison"></label></span>
-				<span><label>Complément d'adresse : <input placeholder="ex : bât, allée"><label></span>
-				<span><label>Ville : <input placeholder="Ville"><label></span>
-				<span><label>Code postal : <input placeholder="ex : 57000"><label></span>
-				<span><label>Téléphone : <input placeholder="Téléphone"><label></span>			
+				<span><label>Complément d'adresse : <input placeholder="ex : bât, allée"></label></span>
+				<span><label>Ville : <input placeholder="Ville"></label></span>
+				<span><label>Code postal : <input placeholder="ex : 57000"></label></span>
+				<span><label>Téléphone : <input placeholder="Téléphone"></label></span>			
 			</div><div id="action">
 				<form action="validationCommande.html">
 					<button id="continuer">Continuer...</button>
