Repositionnement du header

--- a/article.html
+++ b/article.html
@@ -10,19 +10,19 @@
 		<section id="header">
 			<h1>Bienvenue sur le site du mauvais centre !</h1>
 			<h2>Boutique en ligne spécialisée dans le tire-bouchon et le décapsuleur</h2>
-		</section>
 			<div class="panier">
-				<a href="panier.html" class="link">
+				<a href="panier.html" class="link" title="Aller au panier">
 					<img src="assets/images/panier.png" class="logoHeader" alt="image panier">
 					<div>Mon panier</div><div class="price">0.00€</div>
 				</a>
 			</div><div class="compte">
-				<a href="construction.html" class="link">
+				<a href="construction.html" class="link" title="Se connecter">
 						<img src="assets/images/bonhomme.jpg" class="logoHeader" alt="image bonhomme compte">
 						<div>Mon compte</div>
 						<div>Se connecter</div>
 				</a>
-			</div>
+			</div>	
+		</section>
 		<div id="menu">
 			<table>
 				<tr>
@@ -96,7 +96,7 @@
 			</table>
 		</div>
 		<section id="article">
-				<h1>Tire bouchon en forme de cerf, fabriqué en bois</h1>
+				<h1>Tire bouchon en forme de cerf, fabriqué en métal</h1>
 				<div><img src="assets/images/tireBouchonCerf.jpg" alt="Tire bouchon en forme de cerf">
 				<div id="prix">
 					<div class="oldPrice"> 10,50€</div>
@@ -110,7 +110,7 @@
 			<section id="descriptif">
 				<h2>Descriptif :</h2>
 					<h3>Description : </h3>
-					<p>Ajoutez une touche festive pendant l'ouverture de vos bouteilles ce Noël grâce à ce tire-bouchon élégant en forme de cerf. Fabriqué en bois, il possède une finition à la peinture métallisé magnifique. Article indispensable pour que l'alcool coule à flots à Noël (à consommer avec modération), il représente aussi un accessoire de cuisine très chic ! Ce tire-bouchon est vendu présenté dans une boîte : il fera donc un cadeau idéal</p>
+					<p>Ajoutez une touche festive pendant l'ouverture de vos bouteilles ce Noël grâce à ce tire-bouchon élégant en forme de cerf. Fabriqué en métal, il possède une finition à la peinture métallisé magnifique. Article indispensable pour que l'alcool coule à flots à Noël (à consommer avec modération), il représente aussi un accessoire de cuisine très chic ! Ce tire-bouchon est vendu présenté dans une boîte : il fera donc un cadeau idéal</p>
 					<h3>Dimensions	 : </h3>
 					<p>longueur x largeur : 14 x 3,5 cm</p>	
 					<h3>Fonctionnalités inédites :</h3>
