--- a/panier.html
+++ b/panier.html
@@ -10,19 +10,19 @@
 		<section id="header">
 			<h1>Bienvenue sur le site du mauvais centre !</h1>
 			<h2>Boutique en ligne spécialisée dans le tire-bouchon et le décapsuleur</h2>
-		</section>
 			<div class="panier">
-				<a href="panier.html" class="link">
+				<a href="panier.html" class="link" title="Aller au panier">
 					<img src="assets/images/panier.png" class="logoHeader" alt="image panier">
-					<div>Mon panier</div><div class="price">10,29€</div>
+					<div>Mon panier</div><div class="price">0.00€</div>
 				</a>
 			</div><div class="compte">
-				<a href="construction.html" class="link">
+				<a href="construction.html" class="link" title="Se connecter">
 						<img src="assets/images/bonhomme.jpg" class="logoHeader" alt="image bonhomme compte">
 						<div>Mon compte</div>
 						<div>Se connecter</div>
 				</a>
-			</div>
+			</div>	
+		</section>
 		<div id="menu">
 			<table>
 				<tr>
@@ -112,11 +112,12 @@
 					<td>Prix unitaire TTC</td>
 					<td>Quantité</td>
 				</tr><tr>
-					<td><span><img src="assets/images/tireBouchonCerf.jpg" alt="image tire bouchon cerf"></span></td>
-					<td>Tire bouchon en forme de cerf, fabriqué en bois</td>
+					<td id="imagePanier"><span><img src="assets/images/tireBouchonCerf.jpg" alt="image tire bouchon cerf"></span></td>
+					<td>Tire bouchon en forme de cerf, fabriqué en métal</td>
 					<td>En stock</td>
 					<td>10,29 €</td>
 					<td><input type="number" placeholder="1"></td>
+				</tr>
 			</table>
 			<br>
 			<div id="total">
