--- a/recherche.html
+++ b/recherche.html
@@ -10,19 +10,19 @@
 		<section id="header">
 			<h1>Bienvenue sur le site du mauvais centre !</h1>
 			<h2>Boutique en ligne spécialisée dans le tire-bouchon et le décapsuleur</h2>
-		</section>
 			<div class="panier">
-				<a href="panier.html" class="link">
+				<a href="panier.html" class="link" title="Aller au panier">
 					<img src="assets/images/panier.png" class="logoHeader" alt="image panier">
 					<div>Mon panier</div><div class="price">0.00€</div>
 				</a>
 			</div><div class="compte">
-				<a href="construction.html" class="link">
+				<a href="construction.html" class="link" title="Se connecter">
 						<img src="assets/images/bonhomme.jpg" class="logoHeader" alt="image bonhomme compte">
 						<div>Mon compte</div>
 						<div>Se connecter</div>
 				</a>
-			</div>
+			</div>	
+		</section>
 		<div id="menu">
 			<table>
 				<tr>
@@ -96,51 +96,51 @@
 			</table>
 		</div>
 		<section id="recherche">
-			<h1>Résultats pour "ouvre bouteille"...</h1>
+			<h1>Résultats pour votre recherche...</h1>
 			<select id="tri">
-				<option>classement</option>
+				<option>Classement</option>
 				<option>Prix croissant</option>
 				<option>Prix décroissant</option>
 				<option>Meilleurs votes</option>
 			</select>
 			<table id="diffarticles">
 				<tr>
-					<td class="vignette"> <a title="voir la fiche produit tire bouchon1" href="article.html"> <img src="assets/images/tir1.jpg" alt="image tire bouchon"></a> </td>
+					<td class="vignette"> <a title="Voir la fiche produit" href="article.html"> <img src="assets/images/tir1.jpg" alt="image tire bouchon"></a> </td>
 					<td class="description">Tire bouchon à levier noir/gris. Disponible en différents coloris.</td>
 					<td class="prix">89.50 €</td>
 					<td class="dispo"> <em>en stock</em> </td>
 					<td class="redirection"> <form action="article.html"> <input class="gotodetail" type="submit" value="Voir"> </form> </td>
 				</tr>
 				<tr>
-					<td class="vignette"> <a title="voir la fiche produit tire bouchon2" href="article.html"> <img src="assets/images/tir2.jpg" alt="image tire bouchon"></a> </td>
+					<td class="vignette"> <a title="Voir la fiche produit" href="article.html"> <img src="assets/images/tir2.jpg" alt="image tire bouchon"></a> </td>
 					<td class="description"> Tire bouchon déco cerf. Disponible en coffret décapsuleur/Ouvre-bouteille...</td>
 					<td class="prix">10.29 €</td>
 					<td class="dispo"> <em>en stock</em> </td>
 					<td class="redirection"> <form action="article.html"> <input class="gotodetail" type="submit" value="Voir"> </form> </td>
 				</tr>
 				<tr>
-					<td class="vignette"> <a title="voir la fiche produit tire bouchon3" href="article.html"> <img src="assets/images/decaps3.jpg" alt="image tire bouchon"></a> </td>
+					<td class="vignette"> <a title="Voir la fiche produit" href="article.html"> <img src="assets/images/decaps3.jpg" alt="image tire bouchon"></a> </td>
 					<td class="description">Décapsuleur déco cerf. Disponible en coffret décapsuleur/Ouvre-bouteille...</td>
 					<td class="prix">22.50 €</td>
 					<td class="dispo"> <em>en stock</em> </td>
 					<td class="redirection"> <form action="article.html"> <input class="gotodetail" type="submit" value="Voir"> </form> </td>
 				</tr>
 				<tr>
-					<td class="vignette"> <a title="voir la fiche produit tire bouchon4" href="article.html"> <img src="assets/images/tir4.jpg" alt="image tire bouchon"></a> </td>
+					<td class="vignette"> <a title="Voir la fiche produit" href="article.html"> <img src="assets/images/tir4.jpg" alt="image tire bouchon"></a> </td>
 					<td class="description">Ouvre bouteille et décapsuleur 2 en 1. 2 leviers métal</td>
 					<td class="prix">9.90 €</td>
 					<td class="dispo"> <em>en stock</em> </td>
 					<td class="redirection"> <form action="article.html"> <input class="gotodetail" type="submit" value="Voir"> </form> </td>
 				</tr>
 				<tr>
-					<td class="vignette"> <a title="voir la fiche produit tire bouchon5" href="article.html"> <img src="assets/images/tir5.jpg" alt="image tire bouchon"></a> </td>
+					<td class="vignette"> <a title="Voir la fiche produit" href="article.html"> <img src="assets/images/tir5.jpg" alt="image tire bouchon"></a> </td>
 					<td class="description">Tire bouchon plastique à poignée</td>
 					<td class="prix">29.00 €</td>
 					<td class="dispo"> <em>en stock</em> </td>
 					<td class="redirection"> <form action="article.html"> <input class="gotodetail" type="submit" value="Voir"> </form> </td>
 				</tr>
 				<tr>
-					<td class="vignette"> <a title="voir la fiche produit tire bouchon6" href="article.html"> <img src="assets/images/tir7.jpg" alt="image tire bouchon"></a> </td>
+					<td class="vignette"> <a title="Voir la fiche produit" href="article.html"> <img src="assets/images/tir7.jpg" alt="image tire bouchon"></a> </td>
 					<td class="description">Tire bouchon décapsuleur de sommelier refermable</td>
 					<td class="prix">30.00 €</td>
 					<td class="dispo"> <em>en stock</em> </td>
