--- a/validationcommande.html
+++ b/validationcommande.html
@@ -10,19 +10,19 @@
 		<section id="header">
 			<h1>Bienvenue sur le site du mauvais centre !</h1>
 			<h2>Boutique en ligne spécialisée dans le tire-bouchon et le décapsuleur</h2>
-		</section>
 			<div class="panier">
-				<a href="panier.html" class="link">
+				<a href="panier.html" class="link" title="Aller au panier">
 					<img src="assets/images/panier.png" class="logoHeader" alt="image panier">
-					<div>Mon panier</div><div class="price">10,29€</div>
+					<div>Mon panier</div><div class="price">0.00€</div>
 				</a>
 			</div><div class="compte">
-				<a href="construction.html" class="link">
+				<a href="construction.html" class="link" title="Se connecter">
 						<img src="assets/images/bonhomme.jpg" class="logoHeader" alt="image bonhomme compte">
 						<div>Mon compte</div>
 						<div>Se connecter</div>
 				</a>
-			</div>
+			</div>	
+		</section>
 		<div id="menu">
 			<table>
 				<tr>
