Page validationCommande terminee

--- a/article.html
+++ b/article.html
@@ -110,12 +110,13 @@
 			<section id="descriptif">
 				<h2>Descriptif :</h2>
 					<h3>Description : </h3>
-					<p>Ajoutez une touche festive pendant l'ouverture de vos bouteilles ce Noël grâce à ce tire-bouchon élégant en forme de cerf. Fabriqué en métal, il possède une finition à la peinture métallisé magnifique. Article indispensable pour que l'alcool coule à flots à Noël (à consommer avec modération), il représente aussi un accessoire de cuisine très chic ! Ce tire-bouchon est vendu présenté dans une boîte : il fera donc un cadeau idéal</p>
+					<p>Ajoutez une touche festive pendant l'ouverture de vos bouteilles ce Noël grâce à ce tire-bouchon élégant en forme de cerf. Fabriqué en métal, il possède une finition à la peinture métallisée 
+					magnifique. Article indispensable pour que l'alcool coule à flots à Noël (à consommer avec modération), il représente aussi un accessoire de cuisine très chic ! Ce tire-bouchon est vendu présenté dans une boîte : il fera donc un cadeau idéal</p>
 					<h3>Dimensions	 : </h3>
 					<p>longueur x largeur : 14 x 3,5 cm</p>	
-					<h3>Fonctionnalités inédites :</h3>
+					<h3>Fonctionnalités inédites (frais supplémentaires 3.50€) :</h3>
 					<p>- 360 degrés de rotation</p>
-					<p>- poignée chauffante (pour la version premium, frais supplémentaires)</p>
+					<p>- poignée chauffante (pour la version premium, frais supplémentaires 1325.50€)</p>
 					<p>- nous gravons votre nom gratuitement !</p>
 			</section><section id="commentaire">
 				<h2>Laisser un avis :</h2>
