--- a/panier.html
+++ b/panier.html
@@ -13,7 +13,7 @@
 			<div class="panier">
 				<a href="panier.html" class="link" title="Aller au panier">
 					<img src="assets/images/panier.png" class="logoHeader" alt="image panier">
-					<div>Mon panier</div><div class="price">0.00€</div>
+					<div>Mon panier</div><div class="price">10.29€</div>
 				</a>
 			</div><div class="compte">
 				<a href="construction.html" class="link" title="Se connecter">
@@ -120,14 +120,19 @@
 				</tr>
 			</table>
 			<br>
+			<br>
 			<div id="total">
 				<div>Total de votre panier (hors frais de livraison) : <strong>10,29</strong></div>
-			</span><br><br><div id="codePromo">
-				<label>Code promo : <input></label><button>Valider</button>
-			</span><br>
-			<div>
+			</div>
+			<br>
+			<div id="codePromo">
+				<form action="codePromo.html">
+					<label>Code promo : <input></label><button>Valider</button>
+				</form>
+			</div>
+			<div id="continuer">
 				<form action="validationCommande.html">
-					<button id="continuer">Continuer...</button>
+					<button class="continue">Continuer...</button>
 				</form>
 			</div>
 		</section>		
