--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -23,3 +23,98 @@
 				</a>
 			</div>	
 		</section>
+		<div id="menu">
+			<table>
+				<tr>
+					<td>
+						<div id="accueil">
+							<a href="index.html" class="link">Accueil</a>
+							<br>
+							<br>
+							<a href="construction.html" class="link">Les bons plans de Noël !</a>
+							<br>
+							<a href="construction.html" class="link">Les bons plans de la semaine</a>
+							<br>
+							<a href="construction.html" class="link">Les bons plans du mois</a>
+						</div>
+					</td><td>
+						<div id="tireBouchon">
+							<a href="construction.html" class="link">Notre sélection de tire-bouchon</a>
+							<br>
+							<br>
+							<a href="construction.html" class="link">En bois</a>
+							<br>
+							<a href="construction.html" class="link">En acier</a>
+							<br>
+							<a href="construction.html" class="link">Personnalisé</a>
+							<br>
+							<a href="construction.html" class="link">Haut de gamme</a>
+							<br>
+							<a href="construction.html" class="link">Milieu de gamme</a>
+							<br>
+							<a href="construction.html" class="link">Bas de gamme</a>
+						</div>
+					</td><td>
+						<div id="decapsuleur">	
+							<a href="construction.html" class="link">Notre sélection de décapsuleurs</a>
+							<br>
+							<br>
+							<a href="construction.html" class="link">En bois</a>
+							<br>
+							<a href="construction.html" class="link">En acier</a>
+							<br>
+							<a href="construction.html" class="link">Personnalisé</a>
+							<br>
+							<a href="construction.html" class="link">Haut de gamme</a>
+							<br>
+							<a href="construction.html" class="link">Milieu de gamme</a>
+							<br>
+							<a href="construction.html" class="link">Bas de gamme</a>
+						</div>
+					</td><td>
+						<div id="catalogue">
+							<a href="recherche.html" class="link">Catalogue</a>
+							<br>
+							<br>
+							<a href="article.html" class="link">Le coup de coeur de la semaine</a>
+							<br>
+							<a href="construction.html" class="link">Tous nos produits</a>
+							<br>
+							<a href="construction.html" class="link">Tous les tires-bouchon</a>
+							<br>
+							<a href="construction.html" class="link">Tous les décapsuleurs</a>
+							<br>
+							<a href="construction.html" class="link">Tous nos services</a>
+							<br>
+						</div>
+					</td><td>
+					<form action="recherche.html">
+						<div><a href="recherche.html"><img src="assets/images/loupe.png" alt="image loupe rechercher"></a></div>
+						<input name="search" type="text" placeholder="Rechercher un produit ou une référence..."><a href="article.html"></a>
+					</form></td>
+					</tr>
+			</table>
+		</div>
+		<section id="qsn">
+			<h1> Qui sommes-nous</h1>
+			<p></p>
+		
+		<footer>
+			<table id="bas">
+				<tr>
+					<td><a href="construction.html" class="link">Tous nos produits</a></td>
+					<td><a href="construction.html" class="link">Qui sommes nous?</a></td>
+					<td><a href="construction.html" class="link">Moyens de paiements</a></td>
+				</tr><tr>
+					<td><a href="construction.html" class="link">Nos offres et promotions</a></td>
+					<td><a href="construction.html" class="link">Nous contacter</a></td>
+					<td><a href="construction.html" class="link">Livraisons</a></td>
+				</tr><tr>
+					<td><a href="construction.html" class="link">Les nouveautés</a></td>
+					<td><a href="construction.html" class="link">FAQ</a></td>
+					<td><a href="construction.html" class="link">Conditions générales de ventes</a></td>
+				</tr>
+			</table>
+		</footer>
+	</body>
+</html>
