--- a/codePromo.html
+++ b/codePromo.html
@@ -98,9 +98,9 @@
 			</table>
 		</div>
 		<section id="pageInexistante">
-			<h1>La page est en construction...</h1>
+			<h1>Aucun code promo n'a été trouvé...</h1>
 			<div>
-				<a href="index.html" class="link">Cliquez ici pour revenir à la page d'accueil</a>
+				<a href="panier.html" class="link">Cliquez ici pour revenir à votre panier</a>
 			</div>
 		</section>
 	</body>
