--- a/quisommesnous.html
+++ b/quisommesnous.html
@@ -8,8 +8,10 @@
 	</head>
 	<body>
 		<section id="header">
-			<h1>Bienvenue sur le site du mauvais centre !</h1>
-			<h2>Boutique en ligne spécialisée dans le tire-bouchon et le décapsuleur</h2>
+			<div>
+				<h1>Bienvenue sur le site du mauvais centre !</h1>
+				<h2>Boutique en ligne spécialisée dans le tire-bouchon et le décapsuleur</h2>
+			</div>
 			<div class="panier">
 				<a href="panier.html" class="link" title="Aller au panier">
 					<img src="assets/images/panier.png" class="logoHeader" alt="image panier">
